--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,19 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: #f5f5f5; /* Lighter grey for better contrast */
+  background-color: #ffffff; 
   margin: 0;
   padding: 0;
-  color: #333; /* Darker text color for better contrast */
+  color: #333; 
 }
 
 a {
-  color: #007bff; /* Blue link color */
+  color: #218cff; 
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #0056b3; /* Darker blue on hover/focus */
+  color: #003f82; 
 }
 
 h1,
@@ -23,7 +23,7 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
-  color: #000; /* Darker heading color */
+  color: #000; 
 }
 
 .container {
@@ -58,8 +58,8 @@ form textarea {
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
-  color: #333; /* Darker text color for form inputs */
-  background-color: #fff; /* White background for form inputs */
+  color: #000000; 
+  background-color: #fff; 
 }
 
 form textarea {
@@ -71,13 +71,13 @@ form textarea {
 
 form button {
   background: none;
-  border: 2px solid #000; /* Black border for button */
+  border: 2px solid #000; 
   padding: 1rem;
   text-transform: uppercase;
-  color: #000; /* Dark text color for button */
+  color: #000; 
 }
 
 .site-footer {
   padding: 2rem 0;
-  color: #666; /* Darker footer text color */
+  color: #6c6c6c; 
 }
